Added response model for Api documentation
